--- a/deafio-dia-do-rock/package.json
+++ b/deafio-dia-do-rock/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
