--- a/src/DesafioDiaDoRock.UI/DesafioDiaDoRock.UI.csproj
+++ b/src/DesafioDiaDoRock.UI/DesafioDiaDoRock.UI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -16,9 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ApplicationCore\DesafioDiaDoRock.ApplicationCore.csproj" />
+    <ProjectReference Include="..\DesafioDiaDoRock.ApplicationCore\DesafioDiaDoRock.ApplicationCore.csproj" />
   </ItemGroup>
-
+	
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
