Adicionando autenticação JWT

--- a/src/DesafioDiaDoRock.PublicApi/appsettings.json
+++ b/src/DesafioDiaDoRock.PublicApi/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "Secret": "7aP9IUzG!$fV7p2N3r6%vQz4xZ5j8Q$w",
+    "Issuer": "DesafioDiaDoRockIssuer",
+    "Audience": "DesafioDiaDoRockAudience"
+  },
   "AllowedHosts": "*"
 }
