--- a/src/DesafioDiaDoRock.ApplicationCore/DesafioDiaDoRock.ApplicationCore.csproj
+++ b/src/DesafioDiaDoRock.ApplicationCore/DesafioDiaDoRock.ApplicationCore.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
+  </ItemGroup>
+
 </Project>
