--- a/.github/workflows/main_api-desafiodiadorock.yml
+++ b/.github/workflows/main_api-desafiodiadorock.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - api-desafiodiadorock
+name: Build and deploy ASP.Net Core apps to Azure Web Apps
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-api:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,36 +21,82 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
+      - name: Build API with dotnet
         run: dotnet build src/DesafioDiaDoRock.PublicApi/DesafioDiaDoRock.PublicApi.csproj --configuration Release
 
-      - name: dotnet publish
+      - name: dotnet publish API
         run: dotnet publish src/DesafioDiaDoRock.PublicApi/DesafioDiaDoRock.PublicApi.csproj -c Release -o ${{env.DOTNET_ROOT}}/api-desafiodiadorock
 
-      - name: Upload artifact for deployment job
+      - name: Upload API artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-api-app
           path: ${{env.DOTNET_ROOT}}/api-desafiodiadorock
 
-  deploy:
+  build-ui:
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    needs: build-api
 
     steps:
-      - name: Download artifact from build job
+      - uses: actions/checkout@v4
+
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.x'
+
+      - name: Build UI with dotnet
+        run: dotnet build src/DesafioDiaDoRock.Ui/DesafioDiaDoRock.Ui.csproj --configuration Release
+
+      - name: dotnet publish UI
+        run: dotnet publish src/DesafioDiaDoRock.Ui/DesafioDiaDoRock.Ui.csproj -c Release -o ${{env.DOTNET_ROOT}}/ui-desafiodiadorock
+
+      - name: Upload UI artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: .net-ui-app
+          path: ${{env.DOTNET_ROOT}}/ui-desafiodiadorock
+
+  deploy-api:
+    runs-on: ubuntu-latest
+    needs: build-api
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-api.outputs.webapp-url }}
+
+    steps:
+      - name: Download API artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-api-app
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
+      - name: Deploy API to Azure Web App
+        id: deploy-api
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'api-desafiodiadorock'
           slot-name: 'Production'
-          package: .
+          package: ${{ github.workspace }}/api-desafiodiadorock
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BFC982AFC2EE44BF933EE86A57FE4EF9 }}
+
+  deploy-ui:
+    runs-on: ubuntu-latest
+    needs: build-ui
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-ui.outputs.webapp-url }}
+
+    steps:
+      - name: Download UI artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-ui-app
+
+      - name: Deploy UI to Azure Web App
+        id: deploy-ui
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'ui-desafiodiadorock'
+          slot-name: 'Production'
+          package: ${{ github.workspace }}/ui-desafiodiadorock
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_f2e39908ee4445a1a23ef1c69089a116 }}
