Update main_api-desafiodiadorock.yml remove workflow from ui

--- a/.github/workflows/main_api-desafiodiadorock.yml
+++ b/.github/workflows/main_api-desafiodiadorock.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-api:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,33 +32,10 @@ jobs:
         with:
           name: .net-api-app
           path: ${{env.DOTNET_ROOT}}/api-desafiodiadorock
-  
-  build-ui:
+
+  deploy:
     runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.x'
-
-      - name: Build with dotnet
-        run: dotnet build  src/DesafioDiaDoRock.UI/DesafioDiaDoRock.UI.csproj --configuration Release
-
-      - name: dotnet publish
-        run: dotnet publish src/DesafioDiaDoRock.UI/DesafioDiaDoRock.UI.csproj -c Release -o ${{env.DOTNET_ROOT}}/ui-desafiodiadorock
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/ui-desafiodiadorock
-  
-  deploy-api:
-    runs-on: ubuntu-latest
-    needs: build-api
+    needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -77,25 +54,3 @@ jobs:
           slot-name: 'Production'
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BFC982AFC2EE44BF933EE86A57FE4EF9 }}
-
-  deploy-ui:
-    runs-on: ubuntu-latest
-    needs: build-ui
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: .net-app
-      
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'ui-desafiodiadorock'
-          slot-name: 'production'
-          package: .
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_f2e39908ee4445a1a23ef1c69089a116 }}
