--- a/.github/workflows/main_ui-desafiodiadorock.yml
+++ b/.github/workflows/main_ui-desafiodiadorock.yml
@@ -22,16 +22,16 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build src/DesafioDiaDoRock.UI/DesafioDiaDoRock.UI.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish src/DesafioDiaDoRock.UI/DesafioDiaDoRock.UI.csproj -c Release -o ${{env.DOTNET_ROOT}}/ui-desafiodiadorock
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{env.DOTNET_ROOT}}/ui-desafiodiadorock
 
   deploy:
     runs-on: ubuntu-latest
