fix: correct url production projects

--- a/src/DesafioDiaDoRock.PublicApi/appsettings.Production.json
+++ b/src/DesafioDiaDoRock.PublicApi/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
-  "BackendUrl": "https://api-desafiodiadorock-geh0e9e3gkfpbzgg.eastus-01.azurewebsites.net/",
-  "FrontendUrl": "https://ui-desafiodiarock.raphaelfalves.dev/",
+  "BackendUrl": "https://api-desafiodiadorock-geh0e9e3gkfpbzgg.eastus-01.azurewebsites.net",
+  "FrontendUrl": "https://ui-desafiodiarock.raphaelfalves.dev",
   "GoogleApiKey": "AIzaSyAqN-qevL5e5RtlGTbcUwEVkh7vi6MPcuM",
   "Logging": {
     "LogLevel": {
