adicionando o aspire e o início dos testes automatizados

--- a/src/DesafioDiaDoRock.PublicApi/DesafioDiaDoRock.PublicApi.csproj
+++ b/src/DesafioDiaDoRock.PublicApi/DesafioDiaDoRock.PublicApi.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\aspire\DesafioDiaDoRock.Aspire\DesafioDiaDoRock.Aspire.ServiceDefaults\DesafioDiaDoRock.Aspire.ServiceDefaults.csproj" />
     <ProjectReference Include="..\DesafioDiaDoRock.Infraestructure\DesafioDiaDoRock.Infraestructure.csproj" />
   </ItemGroup>
 
