feat: Criando auth, Register e Login

--- a/src/DesafioDiaDoRock.PublicApi/appsettings.json
+++ b/src/DesafioDiaDoRock.PublicApi/appsettings.json
@@ -2,16 +2,14 @@
   "BackendUrl": "https://localhost:7241",
   "FrontendUrl": "https://localhost:7242",
   "GoogleApiKey": "AIzaSyAqN-qevL5e5RtlGTbcUwEVkh7vi6MPcuM",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=DiaDoRock;User=sa;Password=33211781angelo;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "JwtSettings": {
-    "Secret": "7aP9IUzG!$fV7p2N3r6%vQz4xZ5j8Q$w",
-    "Issuer": "DesafioDiaDoRockIssuer",
-    "Audience": "DesafioDiaDoRockAudience"
   },
   "AllowedHosts": "*"
 }
