feat: Criando tela de Login e Register

--- a/src/DesafioDiaDoRock.PublicApi/appsettings.json
+++ b/src/DesafioDiaDoRock.PublicApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "BackendUrl": "https://localhost:7241",
   "FrontendUrl": "https://localhost:7242",
+  "Aspire": "https://localhost:51407/",
   "GoogleApiKey": "AIzaSyAqN-qevL5e5RtlGTbcUwEVkh7vi6MPcuM",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=DiaDoRock;User=sa;Password=33211781angelo;TrustServerCertificate=true;"
