--- a/src/DesafioDiaDoRock.PublicApi/appsettings.json
+++ b/src/DesafioDiaDoRock.PublicApi/appsettings.json
@@ -4,7 +4,7 @@
   "Aspire": "https://localhost:51407/",
   "GoogleApiKey": "AIzaSyAqN-qevL5e5RtlGTbcUwEVkh7vi6MPcuM",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=DiaDoRock;User=sa;Password=33211781angelo;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DesafioDiaDoRock;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
