feat: db production

--- a/src/DesafioDiaDoRock.PublicApi/appsettings.Production.json
+++ b/src/DesafioDiaDoRock.PublicApi/appsettings.Production.json
@@ -2,6 +2,9 @@
   "BackendUrl": "https://api-desafiodiadorock-geh0e9e3gkfpbzgg.eastus-01.azurewebsites.net",
   "FrontendUrl": "https://ui-desafiodiarock.raphaelfalves.dev",
   "GoogleApiKey": "AIzaSyAqN-qevL5e5RtlGTbcUwEVkh7vi6MPcuM",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ftp.ph107.peopleshostshared.com;Database=amazityc_d124;User=amazityc_d124;Password=P2vl7$p46;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
