--- a/src/DesafioDiaDoRock.PublicApi/appsettings.json
+++ b/src/DesafioDiaDoRock.PublicApi/appsettings.json
@@ -4,8 +4,9 @@
   "Aspire": "https://localhost:51407/",
   "GoogleApiKey": "AIzaSyAqN-qevL5e5RtlGTbcUwEVkh7vi6MPcuM",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DesafioDiaDoRock;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ftp.ph107.peopleshostshared.com;Database=amazityc_d124;User=amazityc_d124;Password=P2vl7$p46;TrustServerCertificate=true;"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
