--- a/src/DesafioDiaDoRock.PublicApi/Properties/launchSettings.json
+++ b/src/DesafioDiaDoRock.PublicApi/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7241"
